
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int o ;


 int AF_INET ;
 int IPPROTO_IP ;
 int IPPROTO_RAW ;
 int IP_HDRINCL ;
 int SOCK_RAW ;
 scalar_t__ setsockopt (int,int ,int ,void*,int) ;
 int socket (int ,int ,int ) ;

int raw_socket(void)
{
  int s, o = 1;

  if ((s = socket(AF_INET, SOCK_RAW, IPPROTO_RAW)) < 0)
    return -1;

  if (setsockopt(s, IPPROTO_IP, IP_HDRINCL, (void *) &o, sizeof(o)) < 0)
    return (-1);

  return (s);
}
