; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/bsd/dos/extr_19564.c_raw_socket.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/bsd/dos/extr_19564.c_raw_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AF_INET = common dso_local global i32 0, align 4
@SOCK_RAW = common dso_local global i32 0, align 4
@IPPROTO_RAW = common dso_local global i32 0, align 4
@IPPROTO_IP = common dso_local global i32 0, align 4
@IP_HDRINCL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @raw_socket() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 1, i32* %3, align 4
  %4 = load i32, i32* @AF_INET, align 4
  %5 = load i32, i32* @SOCK_RAW, align 4
  %6 = load i32, i32* @IPPROTO_RAW, align 4
  %7 = call i32 @socket(i32 %4, i32 %5, i32 %6)
  store i32 %7, i32* %2, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %20

10:                                               ; preds = %0
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @IPPROTO_IP, align 4
  %13 = load i32, i32* @IP_HDRINCL, align 4
  %14 = bitcast i32* %3 to i8*
  %15 = call i64 @setsockopt(i32 %11, i32 %12, i32 %13, i8* %14, i32 4)
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %10
  store i32 -1, i32* %1, align 4
  br label %20

18:                                               ; preds = %10
  %19 = load i32, i32* %2, align 4
  store i32 %19, i32* %1, align 4
  br label %20

20:                                               ; preds = %18, %17, %9
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i64 @setsockopt(i32, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
